part 1: allow final field reassignment in constructors and class initializers